JBIDE-28356: fix timeout issue
Signed-off-by: Stephane Bouchet <sbouchet@redhat.com>